// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chatPalette > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</section>"
`;

exports[`chatPalette > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`chatPalette > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class="">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`chatPalette > renders with prompt slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class=""></div>Prompt slot
</div>"
`;

exports[`chatPalette > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <!--v-if-->
</div>"
`;
